--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,16 +1,8 @@
-%type-bold{
-	font-family: IRANSans, tahoma, arial;
-	font-weight: bold;
-}
 %type-medium{
-	font-family: IRANSans, tahoma, arial;
+	font-family: Vazir, tahoma, arial;
 	font-weight: 500;
 }
 %type-regular{
-	font-family: IRANSans, tahoma, arial;
+	font-family: Vazir, tahoma, arial;
 	font-weight: normal;
-}
-%type-light{
-	font-family: IRANSans, tahoma, arial;
-	font-weight: 300;
 }
